[package]
name = "oxide_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Implements a basic BIOS bootloader without C dependencies
bootloader = {version = "0.9.23", features=["map_physical_memory"]}
volatile = "0.2.6"
lazy_static = {version="1.0", features=["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.14.2"
# Send data over serial port from our kernel to the host OS
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
crossbeam-queue = {version = "0.2.1", default-features = false, features=["alloc"]}

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

# Removes the requirement for eh_personality lang item by disabling stack unwinding
# and aborting instead
[profile.dev]

[profile.release]

# Exit QEMU automatically when 'cargo test' finishes
# The args are passed from bootimage to QEMU on test runs
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300
# Maps our custom exit code to exit code 0 so cargo test won't say tests failed
# when they actually passed
test-success-exit-code = 33 # (0x10 << 1) | 1
